--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,11 @@
     <TextView
         android:id="@+id/banner"
         style="@style/Widget.AppCompat.TextView"
-        android:layout_width="240dp"
-        android:layout_height="100dp"
+        android:layout_width="243dp"
+        android:layout_height="0dp"
         android:layout_marginTop="66dp"
         android:layout_marginBottom="182dp"
-        android:text="Supra"
+        android:text="Diabetic Guard"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#E91E63"
@@ -55,24 +55,14 @@
         android:id="@+id/mainLoginButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="308dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginBottom="256dp"
         android:backgroundTint="#F46565"
         android:text="LOGIN"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/displayChartButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="308dp"
-        android:backgroundTint="#F46565"
-        android:text="Display Chart"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
