add image logo banner

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,19 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.diabeticguard.HomePage">
 
-    <TextView
-        android:id="@+id/homePageLogo"
-        android:layout_width="240dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="66dp"
-        android:text="Diabetic Guard"
-        android:textAlignment="center"
-        android:textColor="#E91E63"
-        android:textSize="48sp"
-        android:typeface="monospace"
+    <ImageView
+        android:id="@+id/bannerLogo"
+        android:layout_width="309dp"
+        android:layout_height="190dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="48dp"
+        android:src="@drawable/diabetic_guard_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -34,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homePageLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/bannerLogo" />
 
     <Button
         android:id="@+id/uploadToDBButton"
