--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/bannerLogo" />
 
     <Button
-        android:id="@+id/uploadToDBButton"
+        android:id="@+id/uploadToDBButton1"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="104dp"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uploadToDBButton" />
+        app:layout_constraintTop_toBottomOf="@+id/uploadToDBButton1" />
 
     <Button
         android:id="@+id/homePageSearch"
