--- a/app/src/main/res/layout/lst_template.xml
+++ b/app/src/main/res/layout/lst_template.xml
@@ -14,37 +14,36 @@
         android:weightSum="3">
 
         <TextView
-            android:id="@+id/txtdate"
+            android:id="@+id/txtDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
-            android:text="NAME"
-            android:textColor="#000000"
-            android:textSize="13sp" />
+            android:text="Date"
+            android:textColor="#000"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/txttime"
+            android:id="@+id/txtTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
             android:padding="3dp"
-            android:text="ISSN"
-            android:textColor="#000000"
-            android:textSize="13sp" />
+            android:text="Time"
+            android:textColor="#000"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/txtlevel"
+            android:id="@+id/txtLevel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
             android:padding="3dp"
-            android:text="IMPACTFACTOR"
-            android:textColor="#000000"
-            android:textSize="13sp" />
-
+            android:text="Level"
+            android:textColor="#000"
+            android:textSize="16sp" />
 
     </LinearLayout>
 </LinearLayout>
