--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,14 +47,13 @@
         android:id="@+id/mainLoginButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginStart="104dp"
         android:layout_marginBottom="256dp"
         android:backgroundTint="#F46565"
         android:text="LOGIN"
         android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@+id/mainRegisterButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
