--- a/app/src/main/res/layout/activity_search_home_page.xml
+++ b/app/src/main/res/layout/activity_search_home_page.xml
@@ -1,68 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.diabeticguard.SearchHomePage">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/logo_bg_view" />
 
-    <TextView
-        android:id="@+id/searchHomePageLogo"
-        android:layout_width="240dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="66dp"
-        android:text="App-Pill"
-        android:textAlignment="center"
-        android:textColor="#E91E63"
-        android:textSize="48sp"
-        android:typeface="monospace"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="top">
+        <ImageView
+            android:id="@+id/bannerLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/diabetic_guard_logo" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search Medicines"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="24sp"
+            android:textColor="@color/red_dark"
+            android:textStyle="bold"
+            />
 
-    <EditText
-        android:id="@+id/searchHomePageText"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="144dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textColorHint="#F46565"
-        android:textSize="20sp"
-        android:typeface="monospace"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchHomePageLogo" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/searchHomePageButton"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="52dp"
-        android:backgroundTint="#F46565"
-        android:text="SEARCH"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchHomePageText" />
+            <EditText
+                android:id="@+id/searchHomePageText"
+                android:layout_width="240dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="100dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textAlignment="center"
+                android:textColorHint="#F46565"
+                android:textSize="20sp"
+                android:typeface="monospace"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bannerLogo" />
 
-    <TextView
-        android:id="@+id/searchHomePageDrugInfo"
-        android:layout_width="240dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="72dp"
-        android:text="Enter a Medicine Name and Click Search"
-        android:textAlignment="center"
-        android:textColor="#F46565"
-        android:textColorHint="#000000"
-        android:textSize="16sp"
-        android:typeface="monospace"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchHomePageButton" />
+            <Button
+                android:id="@+id/searchHomePageButton"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="52dp"
+                android:backgroundTint="#F46565"
+                android:text="SEARCH"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchHomePageText" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/searchHomePageDrugInfo"
+                android:layout_width="240dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="72dp"
+                android:text="Enter a Medicine Name and Click Search"
+                android:textAlignment="center"
+                android:textColor="#F46565"
+                android:textColorHint="#000000"
+                android:textSize="16sp"
+                android:typeface="monospace"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchHomePageButton" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+</RelativeLayout>
