--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkish_blue">#335577</color>
+    <color name="red_dark">#7a0202</color>
+    <color name="black_light">#454545</color>
 </resources>
