--- a/app/src/main/res/layout/activity_display_user_info.xml
+++ b/app/src/main/res/layout/activity_display_user_info.xml
@@ -11,7 +11,7 @@
         android:layout_width="240dp"
         android:layout_height="100dp"
         android:layout_marginTop="66dp"
-        android:text="App-Pill"
+        android:text="Diabetic Guard"
         android:textAlignment="center"
         android:textColor="#E91E63"
         android:textSize="48sp"
@@ -68,7 +68,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="56dp"
-        android:text="Will You Take This Pill?"
+        android:text="Will You Take This Record?"
         android:textAlignment="center"
         android:textColor="#F46565"
         android:textSize="24sp"
