--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="darkish_blue">#335577</color>
     <color name="red_dark">#7a0202</color>
     <color name="black_light">#454545</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
