--- a/app/src/main/res/layout/activity_upload_to_db.xml
+++ b/app/src/main/res/layout/activity_upload_to_db.xml
@@ -1,12 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    android:orientation="vertical"
-    android:weightSum="10">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.diabeticguard.MealPage" >
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/logo_bg_view" />
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="top">
+        <ImageView
+            android:id="@+id/bannerLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/diabetic_guard_logo" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Upload File"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="24sp"
+            android:textColor="@color/red_dark"
+            android:textStyle="bold"
+            />
+
+
+        <LinearLayout
         android:id="@+id/lvcontainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -17,83 +49,83 @@
         android:padding="1dp"
         android:weightSum="3">
 
-        <TextView
-            android:id="@+id/txtDate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:text="Date"
-            android:textColor="#fff"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txtDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:text="Date"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:padding="3dp"
+                android:text="Time"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtLevel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:padding="3dp"
+                android:text="Level"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/lvcontainer"
+            android:layout_weight="8.5">
+        </ListView>
+
 
         <TextView
-            android:id="@+id/txtTime"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:id="@+id/txtresulttext"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@android:id/list"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_weight="0.5"
             android:gravity="left"
-            android:padding="3dp"
-            android:text="Time"
-            android:textColor="#fff"
-            android:textSize="16sp" />
+            android:text=""
+            android:textColor="#FFF55F54"
+            android:textSize="20sp"
+            android:textStyle="italic|bold"></TextView>
 
-        <TextView
-            android:id="@+id/txtLevel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="left"
-            android:padding="3dp"
-            android:text="Level"
-            android:textColor="#fff"
-            android:textSize="16sp" />
+        <LinearLayout
+            android:id="@+id/lvbottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <Button
+                android:id="@+id/btnupload"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#1083f5"
+                android:gravity="center"
+                android:text="UPLOAD"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </LinearLayout>
-
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@+id/lvcontainer"
-        android:layout_weight="8.5">
-
-    </ListView>
-
-
-    <TextView
-        android:id="@+id/txtresulttext"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@android:id/list"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="2dp"
-        android:layout_weight="0.5"
-        android:gravity="left"
-        android:text=""
-        android:textColor="#FFF55F54"
-        android:textSize="20sp"
-        android:textStyle="italic|bold"></TextView>
-
-    <LinearLayout
-        android:id="@+id/lvbottom"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <Button
-            android:id="@+id/btnupload"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#1083f5"
-            android:gravity="center"
-            android:text="UPLOAD"
-            android:textColor="#ffffff"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
